Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,3 +1,5 @@
 <h1>Make your form here</h1>
 
-<label></label><br/><br/>
+<label><input type="" name=""/></label><br/><br/>
+<label><input type="" name=""/></label><br/><br/>
+<label><input type="" name=""/></label><br/><br/>
