Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,5 +1,6 @@
 <h1>Make your form here</h1>
 
-<label><input type="" name=""/></label><br/><br/>
-<label><input type="" name=""/></label><br/><br/>
-<label><input type="" name=""/></label><br/><br/>
+<form method="post" action="/pirates">
+  <label><input type="" name=""/></label><br/><br/>
+  <label><input type="" name=""/></label><br/><br/>
+  <label><input type="" name=""/></label><br/><br/>
