Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -4,3 +4,4 @@
   <label><input type="" name=""/></label><br/><br/>
   <label><input type="" name=""/></label><br/><br/>
   <label><input type="" name=""/></label><br/><br/>
+</form>
