--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,9 +1,9 @@
 <h1>Make your form here</h1>
 
 <form method="post" action="/pirates">
-  <label><input type="" name=""/></label><br/><br/>
-  <label><input type="" name=""/></label><br/><br/>
-  <label><input type="" name=""/></label><br/><br/>
+  <label><input type="text" name=""/></label><br/><br/>
+  <label><input type="text" name=""/></label><br/><br/>
+  <label><input type="text" name=""/></label><br/><br/>
   <label><input type="" name=""/></label><br/><br/>
   <label><input type="" name=""/></label><br/><br/>
 </form>
