--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -4,6 +4,6 @@
   <label><input type="text" name=""/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
-  <label><input type="" name=""/></label><br/><br/>
+  <label><input type="text" name=""/></label><br/><br/>
   <label><input type="" name=""/></label><br/><br/>
 </form>
