Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -5,5 +5,5 @@
   <label><input type="text" name=""/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
-  <label><input type="" name=""/></label><br/><br/>
+  <label><input type="text" name=""/></label><br/><br/>
 </form>
