Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,7 +1,7 @@
 <h1>Make your form here</h1>
 
 <form method="post" action="/pirates">
-  <label><input type="text" name=""/></label><br/><br/>
+  <label><input type="text" name="pirate[name]"/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
