--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -2,7 +2,7 @@
 
 <form method="post" action="/pirates">
   <label><input type="text" name="pirate[name]"/></label><br/><br/>
-  <label><input type="text" name=""/></label><br/><br/>
+  <label><input type="text" name="pirate[weight]"/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
