--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -4,6 +4,6 @@
   <label>Pirate Name<input type="text" name="pirate[name]"/></label><br/><br/>
   <label>Pirate Weight<input type="text" name="pirate[weight]"/></label><br/><br/>
   <label>Pirate Height<input type="text" name=""/></label><br/><br/>
-  <label><input type="text" name=""/></label><br/><br/>
+  <label>Ship Name<input type="text" name=""/></label><br/><br/>
   <label><input type="text" name=""/></label><br/><br/>
 </form>
