Automatically backed up by Learn

--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -5,5 +5,5 @@
   <label>Pirate Weight<input type="text" name="pirate[weight]"/></label><br/><br/>
   <label>Pirate Height<input type="text" name="pirate[height]"/></label><br/><br/>
   <label>Ship Name<input type="text" name="ship[name]"/></label><br/><br/>
-  <label><input type="text" name="ship[type]"/></label><br/><br/>
+  <label>Ship Type<input type="text" name="ship[type]"/></label><br/><br/>
 </form>
