--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,9 +1,27 @@
 <h1>Make your form here</h1>
 
-<form method="post" action="/pirates">
-  <label>Pirate Name<input type="text" name="pirate[name]"/></label><br/><br/>
-  <label>Pirate Weight<input type="text" name="pirate[weight]"/></label><br/><br/>
-  <label>Pirate Height<input type="text" name="pirate[height]"/></label><br/><br/>
-  <label>Ship Name<input type="text" name="ship[name]"/></label><br/><br/>
-  <label>Ship Type<input type="text" name="ship[type]"/></label><br/><br/>
+<form action='/pirates' method="POST">
+  <h2>Pirate</h2>
+  <label for="pirate_name">Name</label><br>
+  <input id="pirate_name" type="text" name="pirate[name]" /><br>
+  <label for="pirate_weight">Weight</label><br>
+  <input id="pirate_weight" type="text" name="pirate[weight]" /><br>
+  <label for="pirate_height">Height</label><br>
+  <input id="pirate_height" type="text" name="pirate[height]" /><br><br>
+
+  <h2>Ship(s)</h2>
+  <label for="ship_name_1">Name</label><br>
+  <input id="ship_name_1" type="text" name="pirate[ships][][name]" /><br>
+  <label for="ship_type_1">Type</label><br>
+  <input id="ship_type_1" type="text" name="pirate[ships][][type]" /><br>
+  <label for="ship_booty_1">Booty</label><br>
+  <input id="ship_booty_1" type="text" name="pirate[ships][][booty]" /><br><br>
+
+  <label for="ship_name_2">Name</label><br>
+  <input id="ship_name_2" type="text" name="pirate[ships][][name]" /><br>
+  <label for="ship_booty_2">Type</label><br>
+  <input id="ship_type_2" type="text" name="pirate[ships][][type]" /><br>
+  <label for="ship_booty_2">Booty</label><br>
+  <input id="ship_booty_2" type="text" name="pirate[ships][][booty]" /><br>
+  <input type="submit" value="Submit">
 </form>
