Automatically backed up by Learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -2,7 +2,7 @@
 
 <div class="pirate">
 <h3>Name: <%= @pirate.name %></h3>
-<h4>Weight: <%= %></h4>
+<h4>Weight: <%= @pirate.weight%></h4>
 <h4>Height: <%= %></h4>
 
 </div>
