--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -3,7 +3,7 @@
 <div class="pirate">
 <h3>Name: <%= @pirate.name %></h3>
 <h4>Weight: <%= @pirate.weight%></h4>
-<h4>Height: <%= %></h4>
+<h4>Height: <%= @pirate.height%></h4>
 
 </div>
 
