--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -5,7 +5,7 @@
 <h4>Weight: <%= @pirate.weight %></h4>
 <h4>Height: <%= @pirate.height %></h4>
 
-</div>
+</div><br><br>
 
 
 <h2>Display your first ship here</h2>
