--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -4,11 +4,24 @@
 <h3>Name: <%= @pirate.name %></h3>
 <h4>Weight: <%= @pirate.weight %></h4>
 <h4>Height: <%= @pirate.height %></h4>
-
-</div><br><br>
-
+</div>
+<br><br>
 
 <h2>Display your first ship here</h2>
 
+<div class="ship">
+<h3>Name: <%= @pirate.name %></h3>
+<h4>Weight: <%= @pirate.weight %></h4>
+<h4>Height: <%= @pirate.height %></h4>
+</div>
+<br><br>
+
 
 <h2>Display your second ship here</h2>
+
+<div class="pirate">
+<h3>Name: <%= @pirate.name %></h3>
+<h4>Weight: <%= @pirate.weight %></h4>
+<h4>Height: <%= @pirate.height %></h4>
+</div>
+<br><br>
