--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -19,7 +19,7 @@
 
 <h2>Display your second ship here</h2>
 
-<div class="pirate">
+<div class="ship">
 <h3>Name: <%= @pirate.name %></h3>
 <h4>Weight: <%= @pirate.weight %></h4>
 <h4>Height: <%= @pirate.height %></h4>
