--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,4 +1,4 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirate</h1>
 
 <div class="pirate">
 <h3>Name: <%= @pirate.name %></h3>
@@ -7,10 +7,10 @@
 </div>
 <br><br>
 
-<h2>Display your first ship here</h2>
+<h2>Ships</h2>
 
 <div class="ship">
-<h3>Name: <%= @pirate.name %></h3>
+<h3>Name: <%= @ship.name %></h3>
 <h4>Weight: <%= @pirate.weight %></h4>
 <h4>Height: <%= @pirate.height %></h4>
 </div>
