Automatically backed up by Learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -9,7 +9,7 @@
 
 <h2>Ships</h2>
 
-<div class="ship">
+<div class="ships">
 <h3>Name: <%= @ship.name %></h3>
 <h4>Weight: <%= @pirate.weight %></h4>
 <h4>Height: <%= @pirate.height %></h4>
