--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -9,19 +9,10 @@
 
 <h2>Ships</h2>
 
-<div class="ships">
-<h3>Name: <%= @ship.name %></h3>
-<h4>Weight: <%= @pirate.weight %></h4>
-<h4>Height: <%= @pirate.height %></h4>
-</div>
-<br><br>
-
-
-<h2>Display your second ship here</h2>
-
-<div class="ship">
-<h3>Name: <%= @pirate.name %></h3>
-<h4>Weight: <%= @pirate.weight %></h4>
-<h4>Height: <%= @pirate.height %></h4>
+  <% @ships.each do |ship| %>
+    <div class="ships">
+      <h3>Name: <%= ship.name %></h3>
+      <h4>Weight: <%= ship.weight %></h4>
+      <h4>Height: <%= ship.height %></h4>
 </div>
 <br><br>
