--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -14,5 +14,5 @@
       <h3>Name: <%= ship.name %></h3>
       <h4>Weight: <%= ship.weight %></h4>
       <h4>Height: <%= ship.height %></h4>
-</div>
-<br><br>
+    </div><br>
+  <% end %>
