--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -12,7 +12,7 @@
   <% @ships.each do |ship| %>
     <div class="ships">
       <h3>Name: <%= ship.name %></h3>
-      <h4>Weight: <%= ship.weight %></h4>
-      <h4>Height: <%= ship.height %></h4>
+      <h4>Weight: <%= ship.type %></h4>
+      <h4>Height: <%= ship.booty %></h4>
     </div><br>
   <% end %>
