--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,18 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirate</h1>
 
+<div class="pirate">
+<h3>Name: <%= @pirate.name %></h3>
+<h4>Weight: <%= @pirate.weight %></h4>
+<h4>Height: <%= @pirate.height %></h4>
+</div>
+<br><br>
 
-<h2>Display your first ship here</h2>
+<h1>Ships</h1>
 
-
-<h2>Display your second ship here</h2>
+  <% @ships.each do |ship| %>
+    <div class="ships">
+      <h3>Name: <%= ship.name %></h3>
+      <h4>Type: <%= ship.type %></h4>
+      <h4>Booty: <%= ship.booty %></h4>
+    </div><br>
+  <% end %>
